Fix margin for better spacing between sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,8 @@ selettore > discendente diretto
   }
 
   section {
-    margin-block: 4rem;
+    margin-top: 6rem;
+    margin-bottom: 10rem;
   }
 
   footer {
